SILENT: update source tarball

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "quota-3.17.tar.gz": 8dc04ea803a43496dfe275a8260757f558a2d762
+  quota-4.01.tar.gz: 64d2ab8b039cfea1aa4bd9e77e8c373488a7f0bf
